2010-10-21  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        [Win][DRT] should have LayoutTestController.hasSpellingMarker()
        https://bugs.webkit.org/show_bug.cgi?id=47885

        Added IWebFramePrivate::hasSpellingMarker() and impelmented it for
        LayoutTestController.

        * Interfaces/IWebFramePrivate.idl:
        * WebFrame.cpp:
        (WebFrame::hasSpellingMarker):
        * WebFrame.h:
2010-10-21  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        [Win][DRT] should have LayoutTestController.hasSpellingMarker()
        https://bugs.webkit.org/show_bug.cgi?id=47885

        - Implemented LayoutTestController.hasSpellingMarker(),
        - Added fake spellcheck implementation.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (main):
        * DumpRenderTree/win/EditingDelegate.cpp:
        (indexOfFirstWordCharacter):
        (wordLength):
        (EditingDelegate::checkSpellingOfString):
        * DumpRenderTree/win/EditingDelegate.h:
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::hasSpellingMarker):

Canonical link: https://commits.webkit.org/60842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70291 268f45cc-cd09-0410-ab3c-d52691b4dbfc