WebKit/win/WebFrame.h
@@ -273,6 +273,11 @@ public:
 
     virtual HRESULT STDMETHODCALLTYPE layerTreeAsText(BSTR*);
 
+    virtual HRESULT STDMETHODCALLTYPE hasSpellingMarker(
+        /* [in] */ UINT from,
+        /* [in] */ UINT length,
+        /* [retval][out] */ BOOL *result);
+
     // IWebDocumentText
     virtual HRESULT STDMETHODCALLTYPE supportsTextEncoding( 
         /* [retval][out] */ BOOL* result);
